@@ -1,3 +1,6 @@
+* enhancements
+  * Extracted redirect path from Devise failure app to a new method, allowing override in custom failure apps
+
 == 1.0.8
 
 * enhancements
